@@ -441,10 +441,7 @@ compatibility. Though in the past this has not always held true: changes that
 break code have crept into minor version number changes. Typically, the
 documentation lags behind the development in the interest of documenting only
 the lasting features. The latest changes are always documented in the ChangeLog
-file. As Ragel stabilizes, which is expected in the 5.x line, the version
-numbering rules will become more strict and the documentation will become more
-plentiful.
-
+file. 
 
 \chapter{Constructing State Machines}
 
